--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.12"
 dependencies = [
     "pandas>=2.3.1",
     "scikit-learn>=1.7.1",
+    "typing>=3.10.0.0",
     "u8darts>=0.36.0",
 ]
